log
Thu 09 Mar 2023 03:48:34 PM UTC: 
 tests:  0|7
total_score: 0/70
eb00d3e
Thu 09 Mar 2023 03:52:05 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:7: error: unused variable ‘s’ [-Werror=unused-variable]
   16 |   int s = *a;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7b4c8a3
Thu 09 Mar 2023 03:52:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5e1e1b2
Thu 09 Mar 2023 03:52:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
8e48630
Thu 09 Mar 2023 03:56:35 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
1bb265d
Thu 09 Mar 2023 04:08:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:1:2: error: stray ‘#’ in program
    1 | s#include <stdio.h>
      |  ^
exercises.c:1:1: error: unknown type name ‘s’
    1 | s#include <stdio.h>
      | ^
exercises.c:1:11: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | s#include <stdio.h>
      |           ^
Compilation failed
5824da8
